--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "o-2-ui",
+  "name": "o2-ui",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "@docusaurus/core": "3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
     "@mdx-js/react": "^3.0.0",
-    "@o2-ui/carmore-icon": "^1.2.1",
+    "@o2-ui/carmore-icon": "1.3.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
